--- a/FaithConnect/Views/Admin/AdminDashboard.cshtml
+++ b/FaithConnect/Views/Admin/AdminDashboard.cshtml
@@ -29,8 +29,8 @@
                                 </div>
                                 <div class="col col-stats ms-3 ms-sm-0">
                                     <div class="numbers">
-                                        <p class="card-category">Visitors</p>
-                                        <h4 class="card-title">1,294</h4>
+                                        <p class="card-category">Group Count</p>
+                                        <h4 class="card-title">@Model.Groups.Count()</h4>
                                     </div>
                                 </div>
                             </div>
@@ -48,8 +48,27 @@
                                 </div>
                                 <div class="col col-stats ms-3 ms-sm-0">
                                     <div class="numbers">
-                                        <p class="card-category">Groups</p>
-                                        <h4 class="card-title">1303</h4>
+                                        <p class="card-category">User Count</p>
+                                        <h4 class="card-title">@Model.UserAccounts.Count()</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="card card-stats card-round">
+                        <div class="card-body">
+                            <div class="row align-items-center">
+                                <div class="col-icon">
+                                    <div class="icon-big text-center icon-info bubble-shadow-small">
+                                        <i class="fas fa-clipboard-list"></i>
+                                    </div>
+                                </div>
+                                <div class="col col-stats ms-3 ms-sm-0">
+                                    <div class="numbers">
+                                        <p class="card-category">Post</p>
+                                        <h4 class="card-title">@Model.Posts.Count()</h4>
                                     </div>
                                 </div>
                             </div>
