--- a/FaithConnect/Views/Home/MyProfile.cshtml
+++ b/FaithConnect/Views/Home/MyProfile.cshtml
@@ -100,7 +100,7 @@
                                     <div class="card-header">
                                         <div class="d-flex align-items-center justify-content-between">
                                             <div class="d-flex align-items-center">
-                                                <img class="img-xs rounded-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt>
+                                                <img class="img-xs rounded-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" >
                                                 <div class="ml-2">
                                                     <p>Mike Popescu</p>
                                                     <p class="tx-11 text-muted">1 min ago</p>
@@ -121,13 +121,13 @@
                                                             <line x1="8" y1="15" x2="16" y2="15"></line>
                                                             <line x1="9" y1="9" x2="9.01" y2="9"></line>
                                                             <line x1="15" y1="9" x2="15.01" y2="9"></line>
-                                                        </svg> <span class>Unfollow</span>
+                                                        </svg> <span >Unfollow</span>
                                                     </a>
                                                     <a class="dropdown-item d-flex align-items-center" href="#">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-corner-right-up icon-sm mr-2">
                                                             <polyline points="10 9 15 4 20 9"></polyline>
                                                             <path d="M4 20h7a4 4 0 0 0 4-4V4"></path>
-                                                        </svg> <span class>Go to post</span>
+                                                        </svg> <span >Go to post</span>
                                                     </a>
                                                     <a class="dropdown-item d-flex align-items-center" href="#">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share-2 icon-sm mr-2">
@@ -136,13 +136,13 @@
                                                             <circle cx="18" cy="19" r="3"></circle>
                                                             <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
                                                             <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
-                                                        </svg> <span class>Share</span>
+                                                        </svg> <span >Share</span>
                                                     </a>
                                                     <a class="dropdown-item d-flex align-items-center" href="#">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy icon-sm mr-2">
                                                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                                                             <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-                                                        </svg> <span class>Copy link</span>
+                                                        </svg> <span >Copy link</span>
                                                     </a>
                                                 </div>
                                             </div>
@@ -150,7 +150,7 @@
                                     </div>
                                     <div class="card-body">
                                         <p class="mb-3 tx-14">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus minima delectus nemo unde quae recusandae assumenda.</p>
-                                        <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt>
+                                        <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar6.png" >
                                     </div>
                                     <div class="card-footer">
                                         <div class="d-flex post-actions">
@@ -183,7 +183,7 @@
                                     <div class="card-header">
                                         <div class="d-flex align-items-center justify-content-between">
                                             <div class="d-flex align-items-center">
-                                                <img class="img-xs rounded-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt>
+                                                <img class="img-xs rounded-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" >
                                                 <div class="ml-2">
                                                     <p>Mike Popescu</p>
                                                     <p class="tx-11 text-muted">5 min ago</p>
@@ -204,13 +204,13 @@
                                                             <line x1="8" y1="15" x2="16" y2="15"></line>
                                                             <line x1="9" y1="9" x2="9.01" y2="9"></line>
                                                             <line x1="15" y1="9" x2="15.01" y2="9"></line>
-                                                        </svg> <span class>Unfollow</span>
+                                                        </svg> <span >Unfollow</span>
                                                     </a>
                                                     <a class="dropdown-item d-flex align-items-center" href="#">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-corner-right-up icon-sm mr-2">
                                                             <polyline points="10 9 15 4 20 9"></polyline>
                                                             <path d="M4 20h7a4 4 0 0 0 4-4V4"></path>
-                                                        </svg> <span class>Go to post</span>
+                                                        </svg> <span >Go to post</span>
                                                     </a>
                                                     <a class="dropdown-item d-flex align-items-center" href="#">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share-2 icon-sm mr-2">
@@ -219,13 +219,13 @@
                                                             <circle cx="18" cy="19" r="3"></circle>
                                                             <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
                                                             <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
-                                                        </svg> <span class>Share</span>
+                                                        </svg> <span >Share</span>
                                                     </a>
                                                     <a class="dropdown-item d-flex align-items-center" href="#">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy icon-sm mr-2">
                                                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                                                             <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-                                                        </svg> <span class>Copy link</span>
+                                                        </svg> <span >Copy link</span>
                                                     </a>
                                                 </div>
                                             </div>
@@ -233,7 +233,7 @@
                                     </div>
                                     <div class="card-body">
                                         <p class="mb-3 tx-14">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                        <img class="img-fluid" src="../../../assets/images/sample2.jpg" alt>
+                                        <img class="img-fluid" src="../../../assets/images/sample2.jpg" >
                                     </div>
                                     <div class="card-footer">
                                         <div class="d-flex post-actions">
