--- a/FaithConnect/Views/Shared/_AdminLayout.cshtml
+++ b/FaithConnect/Views/Shared/_AdminLayout.cshtml
@@ -88,7 +88,7 @@
                     <li class="nav-item">
                         <a href="~/Admin/Approval">
                             <i class="fas fa-th-list"></i>
-                            <p>Approval</p>
+                            <p>Event Approval</p>
                         </a>
                     </li>
                     <li class="nav-item">
